app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-tekton
  namespace: sniper-app-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-tekton
  template:
    metadata:
      labels:
        app: demo-tekton
        version: v1
    spec:
      containers:
        - name: demo-tekton
          image: docker.hirisun.com/demo-springboot  #会自动引用下面的image tag版本
          ports:
            - containerPort: 8080
              protocol: TCP
              name: tcp
---
apiVersion: v1
kind: Service
metadata:
  name: demo-tekton-service
  namespace: sniper-app-system
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: demo-tekton
    version: v1
