istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: devops-app-gateway
  namespace: sniper-app-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-springboot
  namespace: sniper-app-system
spec:
  hosts:
    - "devops.app.hirisun.com"
  gateways:
    - devops-app-gateway
  http:
    - route:
        - destination:
            host: demo-tekton-service
            port:
              number: 8080

---
#----可选(暂时先不用配置)---------
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo-boot-service
  namespace: sniper-app-system
spec:
  host: demo-boot-service
  subsets:
    - name: v1
      labels:
        version: v1
      trafficPolicy:
        loadBalancer:
          simple: RANDOM
